--- a/index.html
+++ b/index.html
@@ -29,4 +29,4 @@ commonly used letters in the English language.</p>
 <ul>
 <li><a href="http://en.wikipedia.org/wiki/Etaoin_shrdlu">http://en.wikipedia.org/wiki/Etaoin_shrdlu</a></li>
 </ul>
-</div></body></html>
+</div><footer class="container"><hr><ul><li><a href="http://about.mattms.info/">About MattMS</a></li><li><a href="https://github.com/MattMS/css.mattms.info">View on GitHub</a></li></ul></footer></body></html>
