--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <h4 id="heading-4">Heading 4</h4>
 <h5 id="heading-5">Heading 5</h5>
 <h6 id="heading-6">Heading 6</h6>
+<h2 id="heading-2">Heading 2</h2>
+<p>So this page is to test CSS that is used to display Markdown.</p>
+<h3 id="heading-3">Heading 3</h3>
 <p>The quick brown fox jumps over the lazy dog.</p>
 <ul>
 <li><p><a href="http://en.wikipedia.org/wiki/Pangram">http://en.wikipedia.org/wiki/Pangram</a></p>
@@ -11,7 +14,7 @@
 <li><p><a href="http://en.wikipedia.org/wiki/The_quick_brown_fox_jumps_over_the_lazy_dog">http://en.wikipedia.org/wiki/The_quick_brown_fox_jumps_over_the_lazy_dog</a></p>
 </li>
 </ul>
-<h2 id="heading-2">Heading 2</h2>
+<h4 id="heading-4">Heading 4</h4>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua.
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -23,7 +26,7 @@ officia deserunt mollit anim id est laborum.</p>
 <ul>
 <li><a href="http://en.wikipedia.org/wiki/Lorem_ipsum">http://en.wikipedia.org/wiki/Lorem_ipsum</a></li>
 </ul>
-<h3 id="heading-3">Heading 3</h3>
+<h5 id="heading-5">Heading 5</h5>
 <p>Etaoin shrdlu is the approximate order of frequency of the twelve most
 commonly used letters in the English language.</p>
 <ul>
