Add more intro text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 <h5 id="heading-5">Heading 5</h5>
 <h6 id="heading-6">Heading 6</h6>
 <h2 id="heading-2">Heading 2</h2>
-<p>So this page is to test CSS that is used to display Markdown.</p>
+<p>This page is testing the CSS used to display my Markdown sites.</p>
+<p>I coloured the headings as RGB (inspired by
+<a href="https://www.blender.org/">Blender</a>).</p>
+<p>Links always have an underline because I dislike the practice of giving
+a different link for each word in a sentence.</p>
 <h3 id="heading-3">Heading 3</h3>
 <p>The quick brown fox jumps over the lazy dog.</p>
 <ul>
