Fix heading colour info

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <h6 id="heading-6">Heading 6</h6>
 <h2 id="heading-2">Heading 2</h2>
 <p>This page is testing the CSS used to display my Markdown sites.</p>
-<p>I coloured the headings as RGB (inspired by
-<a href="https://www.blender.org/">Blender</a>).</p>
+<p>I coloured the headings as RGB (inspired by the
+<a href="https://www.blender.org/">Blender</a> axis tool).</p>
 <p>Links always have an underline because I dislike the practice of giving
 a different link for each word in a sentence.</p>
 <h3 id="heading-3">Heading 3</h3>
