--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ a different link for each word in a sentence.</p>
 <h3 id="heading-3">Heading 3</h3>
 <p>The quick brown fox jumps over the lazy dog.</p>
 <ul>
-<li><p><a href="http://en.wikipedia.org/wiki/Pangram">http://en.wikipedia.org/wiki/Pangram</a></p>
+<li><p><a href="https://en.wikipedia.org/wiki/Pangram">https://en.wikipedia.org/wiki/Pangram</a></p>
 </li>
-<li><p><a href="http://en.wikipedia.org/wiki/The_quick_brown_fox_jumps_over_the_lazy_dog">http://en.wikipedia.org/wiki/The_quick_brown_fox_jumps_over_the_lazy_dog</a></p>
+<li><p><a href="https://en.wikipedia.org/wiki/The_quick_brown_fox_jumps_over_the_lazy_dog">https://en.wikipedia.org/wiki/The_quick_brown_fox_jumps_over_the_lazy_dog</a></p>
 </li>
 </ul>
 <h4 id="heading-4">Heading 4</h4>
@@ -28,12 +28,12 @@ dolore eu fugiat nulla pariatur.
 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
 officia deserunt mollit anim id est laborum.</p>
 <ul>
-<li><a href="http://en.wikipedia.org/wiki/Lorem_ipsum">http://en.wikipedia.org/wiki/Lorem_ipsum</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Lorem_ipsum">https://en.wikipedia.org/wiki/Lorem_ipsum</a></li>
 </ul>
 <h5 id="heading-5">Heading 5</h5>
 <p>Etaoin shrdlu is the approximate order of frequency of the twelve most
 commonly used letters in the English language.</p>
 <ul>
-<li><a href="http://en.wikipedia.org/wiki/Etaoin_shrdlu">http://en.wikipedia.org/wiki/Etaoin_shrdlu</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Etaoin_shrdlu">https://en.wikipedia.org/wiki/Etaoin_shrdlu</a></li>
 </ul>
 </div><footer class="container"><hr><ul><li><a href="http://about.mattms.info/">About MattMS</a></li><li><a href="https://github.com/MattMS/css.mattms.info">View on GitHub</a></li></ul></footer></body></html>
