Update about link in footer

--- a/index.html
+++ b/index.html
@@ -36,4 +36,4 @@ commonly used letters in the English language.</p>
 <ul>
 <li><a href="https://en.wikipedia.org/wiki/Etaoin_shrdlu">https://en.wikipedia.org/wiki/Etaoin_shrdlu</a></li>
 </ul>
-</div><footer class="container"><hr><ul><li><a href="http://about.mattms.info/">About MattMS</a></li><li><a href="https://github.com/MattMS/css.mattms.info">View on GitHub</a></li></ul></footer></body></html>
+</div><footer class="container"><hr><ul><li><a href="http://about.mattms.info">Read about me</a></li><li><a href="https://github.com/MattMS/css.mattms.info">View on GitHub</a></li></ul></footer></body></html>
