Update README content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="author" content="Matt McKellar-Spence"><meta name="description" content="CSS test page"><meta name="viewport" content="width=device-width, initial-scale=1"><title>CSS test page by MattMS</title><link href="/basic/light/main.css" rel="stylesheet" title="Basic light" type="text/css"><link href="/basic/dark/main.css" rel="alternate stylesheet" title="Basic dark" type="text/css"><link href="/solarized/dark/main.css" rel="alternate stylesheet" title="Solarized dark" type="text/css"></head><body><div class="container"><h1 id="css-styles">CSS styles</h1>
-<p>This repo aims to provide the minimum CSS required to make a site
-created with <a href="http://daringfireball.net/projects/markdown/">Markdown</a>
-decent to view.</p>
+<p>This repo provides CSS for sites created with
+<a href="http://daringfireball.net/projects/markdown/">Markdown</a>.</p>
 <h2 id="styles">Styles</h2>
 <ul>
 <li><p><a href="/basic/dark/">Basic dark</a></p>
@@ -16,12 +15,13 @@ decent to view.</p>
 <a href="https://www.python.org/">Python 3</a> installed.</p>
 <p>Install <a href="http://gulpjs.com/">Gulp</a> globally with:</p>
 <pre><code>npm install -g gulp
-</code></pre><p>Clone the repo and install the dependencies:</p>
+</code></pre><p>Clone the repo:</p>
 <pre><code>git clone https://github.com/MattMS/css.mattms.info.git
 cd css.mattms.info
-npm install
-</code></pre><p>To update the HTML and CSS with any changes to the Markdown or Stylus:</p>
+</code></pre><p>Install the dependencies:</p>
+<pre><code>npm install
+</code></pre><p>Update the HTML and CSS after changes to the Jade, Markdown or Stylus:</p>
 <pre><code>gulp
-</code></pre><p>To start a local server to view your changes:</p>
+</code></pre><p>Start a local server to view changes:</p>
 <pre><code>python -m http.server 1337
 </code></pre></div><footer class="container"><hr><ul><li><a href="http://about.mattms.info">Read about me</a></li><li><a href="https://github.com/MattMS/css.mattms.info">View on GitHub</a></li></ul></footer></body></html>
