Update headings in demo text

--- a/basic/dark/index.html
+++ b/basic/dark/index.html
@@ -4,21 +4,23 @@
 <h4 id="heading-4">Heading 4</h4>
 <h5 id="heading-5">Heading 5</h5>
 <h6 id="heading-6">Heading 6</h6>
-<h2 id="heading-2">Heading 2</h2>
+<h2 id="about-this-page">About this page</h2>
 <p>This page is testing the CSS used to display my Markdown sites.</p>
-<p>I coloured the headings as RGB (inspired by the
-<a href="https://www.blender.org/">Blender</a> axis tool).</p>
-<p>Links always have an underline because I dislike the practice of giving
-a different link for each word in a sentence.</p>
-<h3 id="heading-3">Heading 3</h3>
+<p>I coloured the headings as RGB, inspired by the
+<a href="https://www.blender.org/">Blender</a> axis tool.</p>
+<p>Links always have an underline so they do not rely on colour to identify
+them.</p>
+<h3 id="the-quick-brown-fox">The quick brown fox</h3>
 <p>The quick brown fox jumps over the lazy dog.</p>
+<p>A pangram is a sentence using every letter of the alphabet at least
+once.</p>
 <ul>
 <li><p><a href="https://en.wikipedia.org/wiki/Pangram">https://en.wikipedia.org/wiki/Pangram</a></p>
 </li>
 <li><p><a href="https://en.wikipedia.org/wiki/The_quick_brown_fox_jumps_over_the_lazy_dog">https://en.wikipedia.org/wiki/The_quick_brown_fox_jumps_over_the_lazy_dog</a></p>
 </li>
 </ul>
-<h4 id="heading-4">Heading 4</h4>
+<h4 id="lorem-ipsum">Lorem ipsum</h4>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua.
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -30,7 +32,7 @@ officia deserunt mollit anim id est laborum.</p>
 <ul>
 <li><a href="https://en.wikipedia.org/wiki/Lorem_ipsum">https://en.wikipedia.org/wiki/Lorem_ipsum</a></li>
 </ul>
-<h5 id="heading-5">Heading 5</h5>
+<h5 id="etaoin-shrdlu">Etaoin shrdlu</h5>
 <p>Etaoin shrdlu is the approximate order of frequency of the twelve most
 commonly used letters in the English language.</p>
 <ul>
