--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="author" content="Matt McKellar-Spence"><meta name="description" content="CSS test page"><meta name="viewport" content="width=device-width, initial-scale=1"><title>CSS test page by MattMS</title><link href="http://css.mattms.info/basic/light/index.css?t=2014-12-21T1300+10" rel="stylesheet" title="Basic light" type="text/css"><link href="http://css.mattms.info/basic/dark/index.css?t=2014-12-21T1300+10" rel="alternate stylesheet" title="Basic dark" type="text/css"><link href="http://css.mattms.info/solarized/dark/index.css?t=2014-12-21T1300+10" rel="alternate stylesheet" title="Solarized dark" type="text/css"></head><body><div class="container"><h1 id="css-styles">CSS styles</h1>
-<p>This repo provides CSS for sites created with
-<a href="http://daringfireball.net/projects/markdown/">Markdown</a>.</p>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="author" content="Matt McKellar-Spence"><meta name="description" content="CSS test page"><meta name="viewport" content="width=device-width, initial-scale=1"><title>CSS test page by Matt McKellar-Spence</title><link href="http://css.mattms.info/basic/light/index.css?t=2014-12-21T1300+10" rel="stylesheet" title="Basic light" type="text/css"><link href="http://css.mattms.info/basic/dark/index.css?t=2014-12-21T1300+10" rel="alternate stylesheet" title="Basic dark" type="text/css"><link href="http://css.mattms.info/solarized/dark/index.css?t=2014-12-21T1300+10" rel="alternate stylesheet" title="Solarized dark" type="text/css"></head><body><div class="container"><h1 id="css-styles">CSS styles</h1>
+<p>This repo provides CSS for sites using basic tags, like those created
+with <a href="http://daringfireball.net/projects/markdown/">Markdown</a>.</p>
 <h2 id="styles">Styles</h2>
 <ul>
 <li><p><a href="/basic/dark/">Basic dark</a></p>
@@ -10,8 +10,17 @@
 <li><p><a href="/solarized/dark/">Solarized dark</a></p>
 </li>
 </ul>
+<h2 id="firefox">Firefox</h2>
+<p>If you use <a href="https://www.mozilla.org/en-GB/firefox/desktop/">Firefox</a>
+then you can try the page style switcher.</p>
+<p>Open the &quot;View&quot; menu (<code>Alt + v</code>), select &quot;Page Style&quot; (<code>y</code>) then choose
+the style you would like the page to be.</p>
+<p>This is done by setting the <code>rel</code> attribute on the
+<a href="https://developer.mozilla.org/en/docs/Web/HTML/Element/link">link tag</a>
+to
+<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Link_types">alternate stylesheet</a>.</p>
 <h2 id="local-demo-or-development">Local demo or development</h2>
-<p>You will need <a href="http://nodejs.org/">Node.js</a> and
+<p>You will need <a href="https://nodejs.org/">Node.js</a> and
 <a href="https://www.python.org/">Python 3</a> installed.</p>
 <p>Install <a href="http://gulpjs.com/">Gulp</a> globally with:</p>
 <pre><code>npm install -g gulp
@@ -24,4 +33,4 @@ cd css.mattms.info
 <pre><code>gulp
 </code></pre><p>Start a local server to view changes:</p>
 <pre><code>python -m http.server 1337
-</code></pre></div><footer class="container"><hr><ul><li><a href="http://about.mattms.info">Read about me</a></li><li><a href="https://github.com/MattMS/css.mattms.info">View on GitHub</a></li></ul></footer></body></html>
+</code></pre></div><footer class="container"><hr><ul><li><a href="http://css.mattms.info">Home page</a></li><li><a href="https://github.com/MattMS/css.mattms.info">View on GitHub</a></li><li><a href="http://about.mattms.info">Read about me</a></li></ul></footer></body></html>
