--- a/basic/light/index.html
+++ b/basic/light/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="author" content="Matt McKellar-Spence"><meta name="description" content="CSS test page"><meta name="viewport" content="width=device-width, initial-scale=1"><title>CSS test page by MattMS</title><link href="./index.css" rel="stylesheet" type="text/css"></head><body><div class="container"><h1 id="heading-1">Heading 1</h1>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="author" content="Matt McKellar-Spence"><meta name="description" content="CSS test page"><meta name="viewport" content="width=device-width, initial-scale=1"><title>CSS test page by Matt McKellar-Spence</title><link href="./index.css" rel="stylesheet" type="text/css"></head><body><div class="container"><h1 id="heading-1">Heading 1</h1>
 <h2 id="heading-2">Heading 2</h2>
 <h3 id="heading-3">Heading 3</h3>
 <h4 id="heading-4">Heading 4</h4>
@@ -6,18 +6,17 @@
 <h6 id="heading-6">Heading 6</h6>
 <h2 id="about-this-page">About this page</h2>
 <p>This page is testing the CSS used to display my Markdown sites.</p>
-<p>I coloured the headings as RGB, inspired by the
-<a href="https://www.blender.org/">Blender</a> axis tool.</p>
 <p>Links always have an underline so they do not rely on colour to identify
 them.</p>
+<h2 id="demo-text">Demo text</h2>
 <h3 id="the-quick-brown-fox">The quick brown fox</h3>
 <p>The quick brown fox jumps over the lazy dog.</p>
 <p>A pangram is a sentence using every letter of the alphabet at least
 once.</p>
 <ul>
-<li><p><a href="https://en.wikipedia.org/wiki/Pangram">https://en.wikipedia.org/wiki/Pangram</a></p>
+<li><p><a href="https://en.wikipedia.org/wiki/Pangram">Pangram</a></p>
 </li>
-<li><p><a href="https://en.wikipedia.org/wiki/The_quick_brown_fox_jumps_over_the_lazy_dog">https://en.wikipedia.org/wiki/The_quick_brown_fox_jumps_over_the_lazy_dog</a></p>
+<li><p><a href="https://en.wikipedia.org/wiki/The quick brown fox jumps over the lazy dog">The quick brown fox jumps over the lazy dog</a></p>
 </li>
 </ul>
 <h4 id="lorem-ipsum">Lorem ipsum</h4>
@@ -29,13 +28,20 @@ ut aliquip ex ea commodo consequat.</p>
 dolore eu fugiat nulla pariatur.
 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
 officia deserunt mollit anim id est laborum.</p>
+<p>Lorem ipsum is filler text used to demonstrate a design by removing
+focus from the content.</p>
 <ul>
-<li><a href="https://en.wikipedia.org/wiki/Lorem_ipsum">https://en.wikipedia.org/wiki/Lorem_ipsum</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Lorem_ipsum">Lorem ipsum</a></li>
 </ul>
 <h5 id="etaoin-shrdlu">Etaoin shrdlu</h5>
 <p>Etaoin shrdlu is the approximate order of frequency of the twelve most
 commonly used letters in the English language.</p>
 <ul>
-<li><a href="https://en.wikipedia.org/wiki/Etaoin_shrdlu">https://en.wikipedia.org/wiki/Etaoin_shrdlu</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Etaoin_shrdlu">Etaoin shrdlu</a></li>
 </ul>
-</div><footer class="container"><hr><ul><li><a href="http://about.mattms.info">Read about me</a></li><li><a href="https://github.com/MattMS/css.mattms.info">View on GitHub</a></li></ul></footer></body></html>
+<h2 id="about-this-style">About this style</h2>
+<p>I coloured the headings as RGB, inspired by the
+<a href="https://www.blender.org/">Blender</a> axis tool.</p>
+<p>Links always have an underline so they do not rely on colour to identify
+them.</p>
+</div><footer class="container"><hr><ul><li><a href="http://css.mattms.info">Home page</a></li><li><a href="https://github.com/MattMS/css.mattms.info">View on GitHub</a></li><li><a href="http://about.mattms.info">Read about me</a></li></ul></footer></body></html>
